--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@headlessui/tailwindcss": "^0.1.2",
     "@heroicons/react": "^2.0.13",
     "@tailwindcss/forms": "^0.5.3",
+    "@tiptap/starter-kit": "^2.3.0",
     "@vercel/analytics": "^0.1.8",
     "ai": "^3.0.19",
     "eventsource-parser": "^1.1.2",
     "next": "^14.0.4",
+    "novel": "^0.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.42.0",
