--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "@headlessui/tailwindcss": "^0.1.2",
     "@heroicons/react": "^2.0.13",
     "@tailwindcss/forms": "^0.5.3",
+    "@tiptap/extension-text-align": "^2.3.0",
+    "@tiptap/pm": "^2.3.0",
+    "@tiptap/react": "^2.3.0",
     "@tiptap/starter-kit": "^2.3.0",
     "@vercel/analytics": "^0.1.8",
     "ai": "^3.0.19",
@@ -25,12 +28,13 @@
     "together-ai": "^0.5.2"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.12",
     "@types/node": "^18.11.3",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.4",
-    "typescript": "4.9.4"
+    "typescript": "^4.9.4"
   }
 }
